--- a/config/database.yml
+++ b/config/database.yml
@@ -17,8 +17,8 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  username: postgres
-  password: 3308653
+  username: <%= Rails.application.credentials.db[:username] %>
+  password: <%= Rails.application.credentials.db[:password] %>
   host: 127.0.0.1
   port: 5432
   # For details on connection pooling, see Rails configuration guide
